sample/msvc/error/c2181.cpp
// C2181.cpp
int main() {
   int i = 0;
   else   // C2181
      i = 1;
}
